--- a/application/html/index.html
+++ b/application/html/index.html
@@ -17,6 +17,7 @@ Na těchto stránkách běží <a href="https://www.elastic.co/kibana/">Kibana</
         <p>
 Teda jako běží, když je zrovna zaplá. ;-)
         </p>
+      </div>
       <div class="content-column-right">
         <h2>Dokumentace</h2>
         <p>
