--- a/application/html/index.html
+++ b/application/html/index.html
@@ -9,13 +9,34 @@
 <body>
   <h1><span><strong>kibana.eliasondrej.com</strong></h1>
   <div class="content">
+    <div class="content-middle">
+      <p>
+      <strong>Na těchto stránkách běží
+        <a href="https://www.elastic.co/kibana/">kibáňa</a> i s elastickým
+        <a href="https://www.elastic.co/elasticsearch/">elasťákem</a>.</strong>
+      </p>
+      <p>
+      Teda jako běží, když je zrovna zaplá a pak je stejně s heslem. Pokračovat můžete tady
+      <a href="https://eliasondrej.com">eliasondrej.com</a>, moc toho tam,
+      myslím, stejně nenajdete, tak tam ani nechoďte.
+      </p></div>
     <div class="content-columns">
       <div class="content-column-left">
+        <h2>Linky</h2>
         <p>
-Na těchto stránkách běží <a href="https://www.elastic.co/kibana/">Kibana</a>
+          <ul>
+            <li><a href="https://github.com/elliason">github.com/elliason</a></li>
+            <li><a href="https://github.com/lhsradek">github.com/lhsradek</a></li>
+	  </ul>
         </p>
         <p>
-Teda jako běží, když je zrovna zaplá. ;-)
+          Makáme na tom jako diví.
+        </p>
+        <p>
+        <img src="work.png"/>
+        </p>
+        <p>
+  Jo a kopirát &copy; 2022 Radek Kádner
         </p>
       </div>
       <div class="content-column-right">
