--- a/application/html/index.html
+++ b/application/html/index.html
@@ -12,11 +12,12 @@
     <div class="content-middle">
       <p>
       <strong>Na těchto stránkách běží
-        <a href="https://www.elastic.co/kibana/">kibáňa</a> i s elastickým
+        <a href="https://www.elastic.co/kibana/">kibáňa</a> i s
         <a href="https://www.elastic.co/elasticsearch/">elasťákem</a>.</strong>
       </p>
       <p>
-      Teda jako běží, když je zrovna zaplá a pak je stejně s heslem. Pokračovat můžete tady
+      Teda jako běží, když je zrovna zaplá a pak je stejně s heslem, které si
+      střežíme. Pokračovat můžete tady
       <a href="https://eliasondrej.com">eliasondrej.com</a>, moc toho tam,
       myslím, stejně nenajdete, tak tam ani nechoďte.
       </p></div>
