--- a/application/html/index.html
+++ b/application/html/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="alternate icon" type="image/png" href="/favicon.png"/>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
+  <link rel="shortcut icon" href="/favicon.png" type="image/png"/>
 </head>
 <body>
   <h1><span><strong>kibana.eliasondrej.com</strong></h1>
