--- a/application/html/index.html
+++ b/application/html/index.html
@@ -39,7 +39,7 @@
         <img src="work.png"/>
         </p>
         <p>
-  Jo a kopirát &copy; 2022 Radek Kádner
+  Jó a kopirát &copy; 2022 Radek Kádner
         </p>
       </div>
       <div class="content-column-right">
